[tool.poetry]
name = "virustotal-tddschn"
version = "0.1.6"
description = "VirusTotal Utility Scripts"
authors = ["Xinyuan Chen <45612704+tddschn@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tddschn/virustotal-tddschn"
repository = "https://github.com/tddschn/virustotal-tddschn"
classifiers = [
    "Topic :: Utilities"
]
keywords = ["virustotal"]

[tool.poetry.scripts]
vtpy = "virustotal_tddschn.virustotal_sum_search:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/tddschn/virustotal-tddschn/issues"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
better-exceptions = "^0.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
