[tool.poetry]
name = "virustotal-tddschn"
version = "0.2.2"
description = "VirusTotal Utility Scripts"
authors = ["Xinyuan Chen <45612704+tddschn@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tddschn/virustotal-tddschn"
repository = "https://github.com/tddschn/virustotal-tddschn"
classifiers = ["Topic :: Utilities"]
keywords = ["virustotal"]
# packages = [
#     { include = "virustotal_tddschn" },
# ]

[tool.poetry.scripts]
vtpy = "virustotal_tddschn.virustotal_sum_search:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/tddschn/virustotal-tddschn/issues"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
ipython = "^8.5.0"
pytest = "^7.2.0"
black = "^22.3.0"
better-exceptions = "^0.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
